scripts/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${P_K8S_APP}-svc
  name: ${P_K8S_APP}-svc
  namespace: ${P_NAMESPACE}
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: http-8080
  selector:
    app: ${P_K8S_APP}-app
  sessionAffinity: None
  type: LoadBalancer
